# hodaun

./: Cargo.toml  license  readme.md
examples/: adsr.rs  automation.rs  chord.rs  desktop.rs  echo.rs  kick.rs  normalize.rs  ogg.rs  pan.rs  perception.rs  repeat.rs  simple.rs  wav.rs
src/: frame.rs  gen.rs  lib.rs  mixer.rs  note.rs  output.rs  source.rs  wav.rs
src/codec/: mod.rs  ogg.rs  wav.rs
src/io/: input.rs  mod.rs  output.rs
