[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'
name = 'hodaun'
version = '0.1.0'

[dependencies]
cpal.optional = true
cpal.version = '0.14.2'
hound.optional = true
hound.version = '3.5.0'
lewton.optional = true
lewton.version = '0.10.2'
parking_lot = '0.12.1'
rand.default-features = false
rand.features = ['small_rng']
rand.optional = true
rand.version = '0.8.5'
serde.features = ['derive']
serde.optional = true
serde.version = '1'
thiserror.optional = true
thiserror.version = '1'

[features]
default = ['input', 'noise', 'notes', 'output', 'wav', 'ogg']
input = ['cpal', 'thiserror']
noise = ['rand']
notes = []
ogg = ['lewton']
output = ['cpal', 'thiserror']
wav = ['hound']
