[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = ['multimedia::audio']
description = 'Audio IO and synthesis'
documentation = 'https://docs.rs/hodaun'
edition = '2021'
homepage = 'https://github.com/kaikalii/hodaun'
keywords = ['audio', 'music', 'synthesizer', 'sound']
license = 'MIT'
name = 'hodaun'
readme = 'readme.md'
version = '0.2.0'

[dependencies]
cpal.optional = true
cpal.version = '0.15.2'
hound.optional = true
hound.version = '3.5.0'
parking_lot = '0.12.1'
rand.default-features = false
rand.features = ['small_rng']
rand.optional = true
rand.version = '0.8.5'
serde.features = ['derive']
serde.optional = true
serde.version = '1'
thiserror.optional = true
thiserror.version = '1'

[features]
default = ['input', 'output', 'noise', 'notes', 'wav']
input = ['cpal', 'thiserror']
noise = ['rand']
notes = []
output = ['cpal', 'thiserror']
wav = ['hound']
